tests/paczka1/small_fuzzy/60353622.err
Error in line 6: k45ONrLz S50 52,3
Error in line 2: WNg S586 19,8
